--- a/front-matter/abstract.tex
+++ b/front-matter/abstract.tex
@@ -1,2 +1,10 @@
 \chapter*{Abstract}\label{ch:abstract}
-Abstract text goes here...
+No document is created in a vacuum.  In all literature, there exists
+some influencing factor either in the form of cited documents,
+collaboration, or documents which authors have read.  This influence
+can be seen within their works, and is present as a latent variable.
+This dissertation introduces a novel method for quantifying these influences,
+and representing them in a semantically understandable fashion.  The
+model is constructed by represented documents as tensors, decomposing
+them into a set of factors, and then searching the corpus factors for
+similarity.  
