--- a/ut-dissertation.tex
+++ b/ut-dissertation.tex
@@ -51,6 +51,7 @@
 \usepackage{pdflscape}					% to produce
 % landscape pages if necessary
 \usepackage[]{algorithm2e}
+\usepackage{subfig}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % This section formats landscape pages properly with the correct page number.
@@ -110,7 +111,7 @@
     \subfile{chapters/01-Introduction}
     \subfile{chapters/02-Approach}
     \subfile{chapters/03-Implementation}
-    \subfile{chapters/04-Results}
+%    \subfile{chapters/04-Results}
 
     %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
     % BIBLIOGRAPHY
