formatting and table cleanup

--- a/ut-dissertation.tex
+++ b/ut-dissertation.tex
@@ -23,7 +23,7 @@
 % TO DO: FILL IN YOUR INFORMATION BELOW - READ THIS SECTION CAREFULLY
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \title{Textual Influence Modeling Through Non-Negative Tensor Decomposition}     	% title of thesis/dissertation
-\author{Robert Lowe}                			% author's name
+\author{Robert Earl Lowe}              			% author's name
 \copyrightYear{2018}           				% copyright year of your thesis/dissertation
 \graduationMonth{August}        			% month of graduation of your thesis/dissertation
 \degree{Doctor of Philosophy}	    			% degree: Doctor of Philosophy, Master of Science, Master of Engineering...
