--- a/ut-dissertation.tex
+++ b/ut-dissertation.tex
@@ -52,6 +52,7 @@
 % landscape pages if necessary
 \usepackage[]{algorithm2e}
 \usepackage{subfig}
+\usepackage{placeins}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % This section formats landscape pages properly with the correct page number.
