Fixing File Names and Compiling Final Chapter

--- a/ut-dissertation.tex
+++ b/ut-dissertation.tex
@@ -111,8 +111,8 @@
     \include{front-matter}
     \subfile{chapters/01-Introduction}
     \subfile{chapters/02-Approach}
-    \subfile{chapters/03-Implementation}
-%    \subfile{chapters/04-Results}
+    \subfile{chapters/03-Results}
+    \subfile{chapters/04-Conclusion}
 
     %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
     % BIBLIOGRAPHY
