--- a/sources.bib
+++ b/sources.bib
@@ -390,3 +390,48 @@ eprint = {/oup/backfile/content_public/journal/dsh/29/2/10.1093/llc/fqt028/2/fqt
   year={1991},
   publisher={Springer}
 }
+@inproceedings{lin2003symbolic,
+  title={A symbolic representation of time series, with implications for streaming algorithms},
+  author={Lin, Jessica and Keogh, Eamonn and Lonardi, Stefano and Chiu, Bill},
+  booktitle={Proceedings of the 8th ACM SIGMOD workshop on Research issues in data mining and knowledge discovery},
+  pages={2--11},
+  year={2003},
+  organization={ACM}
+}
+@inproceedings{schlapbach2004using,
+  title={Using HMM based recognizers for writer identification and verification},
+  author={Schlapbach, Andreas and Bunke, Horst},
+  booktitle={null},
+  pages={167--172},
+  year={2004},
+  organization={IEEE}
+}
+@INPROCEEDINGS{manabe,
+author={Y. Manabe and B. Chakraborty},
+booktitle={2008 IEEE Conference on Soft Computing in Industrial Applications},
+title={Identity detection from on-line handwriting time series},
+year={2008},
+volume={},
+number={},
+pages={365-370},
+keywords={handwriting recognition;image reconstruction;object detection;time series;vectors;biometric authentication system;delay vector;forgery detection;handwriting trajectory reconstruction;identity detection;nonlinear time series analysis;online handwriting signature;online signature verification;person authentication;temporal information;Authentication;Biomechanics;Biometrics;Delay effects;Handwriting recognition;Humans;Image reconstruction;Information science;Time measurement;Time series analysis},
+doi={10.1109/SMCIA.2008.5045991},
+ISSN={},
+month={June},}
+@inproceedings{gazzah2007arabic,
+  title={Arabic handwriting texture analysis for writer identification using the DWT-lifting scheme},
+  author={Gazzah, Sami and Amara, N Ben},
+  booktitle={Document Analysis and Recognition, 2007. ICDAR 2007. Ninth International Conference on},
+  volume={2},
+  pages={1133--1137},
+  year={2007},
+  organization={IEEE}
+}
+@inproceedings{serfass2017dynamic,
+  title={Dynamic Biometric Recognition of Handwritten Digits Using Symbolic Aggregate Approximation},
+  author={Serfass, Doug},
+  booktitle={Proceedings of the SouthEast Conference},
+  pages={1--4},
+  year={2017},
+  organization={ACM}
+}
