--- a/front-matter/acknowledgements.tex
+++ b/front-matter/acknowledgements.tex
@@ -1,2 +1,10 @@
 \chapter*{Acknowledgments}
-I would like to thank...
+I would like to thank my advisor, Dr. Michael Berry, for his guidance
+and encouragement.  I would also like to thank my committee members
+Dr. Judy Day, Dr. Bradley Vander Zanden, and Dr. Audris Mockus for all
+of their helpful input.  I would also like to thank Ms. Dana Bryson,
+without whom the paperwork surrounding the completion of this
+dissertation would have simply not been possible.  Last, but certainly
+not least, I would like to thank my wife, Erin Lowe.  Without Erin's
+encouragement, I would have never gone to graduate school and without
+her love and support I certainly would have never succeeded.
