--- a/back-matter/vita.tex
+++ b/back-matter/vita.tex
@@ -1,2 +1,33 @@
 \chapter*{Vita} \label{ch:vita}
-Vita goes here. The vita should be a brief biography about the author written in third person and paragraph format. It should not be the author's resume or CV.
+Robert Lowe was born in Knoxville Tennessee on June 9, 1980.  He had
+his first programming experience at the age of 8 on his family's
+Commodore Vic-20 computer.  Throughout middle and high school he
+worked diligently to get as much computer time as he possibly could,
+continuing his BASIC and assembler programming.
+In high school he took up C and C++ programming, and was amazed to
+discover that people could actually make a career out of computer
+programming.
+
+After graduating High School, Robert attended Middle Tennessee State
+University for three years, and then left to work for a government
+contracting company.  After working on several systems for government
+record keeping, Robert returned to MTSU in 2005 and finished his BS in
+Computer Science that same year.  Upon graduation, Robert Joined JC
+Reed, a financial conglomerate, and also took a part time teaching
+position at Draughon's Junior College in Murfreesboro.  This latter
+position blossomed into a life long love of teaching and academia.
+After leaving JC Reed, Robert worked as an independent contractor for
+several years before entering graduate school at the University of
+Tennessee in 2008.
+
+During graduate school, Robert supported his growing family by working
+as an independent software developer and adjunct instructor at
+Pellissippi State Community College, ITT Technical Institute,
+Knoxville College, and Maryville College.  He also worked as a
+teaching assistant and research assistant at UT.  These efforts
+resulted in a full time tenure track position at Maryville College, a
+position which Robert started in 2012.
+
+Currently, Robert Lowe is the sole computer scientist on the full time
+faculty of Maryville College.  Upon graduation, he plans to continue
+teaching at Maryville College.
