--- a/front-matter/abstract.tex
+++ b/front-matter/abstract.tex
@@ -3,7 +3,7 @@ No document is created in a vacuum.  In all literature, there exists
 some influencing factor either in the form of cited documents,
 collaboration, or documents which authors have read.  This influence
 can be seen within their works, and is present as a latent variable.
-This dissertation introduces a novel method for quantifying these influences,
+This dissertation introduces a novel method for quantifying these influences
 and representing them in a semantically understandable fashion.  The
 model is constructed by representing documents as tensors, decomposing
 them into a set of factors, and then searching the corpus factors for
