--- a/back-matter/vita.tex
+++ b/back-matter/vita.tex
@@ -8,15 +8,16 @@ In high school he took up C and C++ programming, and was amazed to
 discover that people could actually make a career out of computer
 programming.
 
-After graduating High School, Robert attended Middle Tennessee State
-University for three years, and then left to work for a government
-contracting company.  After working on several systems for government
-record keeping, Robert returned to MTSU in 2005 and finished his BS in
+After graduating South Doyle High School in 1998, Robert attended
+Middle Tennessee State University for three years, and then left to
+work for Business Information Systems, a government contracting
+company.  After working on several systems for government record
+keeping, Robert returned to MTSU in 2005 and finished his BS in
 Computer Science that same year.  Upon graduation, Robert Joined JC
-Reed, a financial conglomerate, and also took a part time teaching
+Reed, a financial conglomerate, and also took a part-time teaching
 position at Draughon's Junior College in Murfreesboro.  This latter
 position blossomed into a life long love of teaching and academia.
-After leaving JC Reed, Robert worked as an independent contractor for
+after leaving JC Reed, Robert worked as an independent contractor for
 several years before entering graduate school at the University of
 Tennessee in 2008.
 
@@ -26,7 +27,7 @@ Pellissippi State Community College, ITT Technical Institute,
 Knoxville College, and Maryville College.  He also worked as a
 teaching assistant and research assistant at UT.  These efforts
 resulted in a full time tenure track position at Maryville College, a
-position which Robert started in 2012.
+position which Robert started in 2014.
 
 Currently, Robert Lowe is the sole computer scientist on the full time
 faculty of Maryville College.  Upon graduation, he plans to continue
