--- a/ut-dissertation.tex
+++ b/ut-dissertation.tex
@@ -53,6 +53,7 @@
 \usepackage[]{algorithm2e}
 \usepackage{subfig}
 \usepackage{placeins}
+\usepackage{pdfpages}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % This section formats landscape pages properly with the correct page number.
@@ -74,6 +75,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
+%    \includepdf[pages=-]{forms/cover_sheet_signed.pdf}
     \pagenumbering{alph} % this is needed to clear certain issues with the hyperref package
     %
     \addToPDFBookmarks{0}{Front Matter}{rootNode} % create a root node named "Front Matter" in the pdf bookmarks
